fix draft card titles being overflowed outside when names are silly long

--- a/src/app/league-zone/league-widgets/league-trade-widget/league-trade-widget.component.scss
+++ b/src/app/league-zone/league-widgets/league-trade-widget/league-trade-widget.component.scss
@@ -11,7 +11,7 @@
     padding: var(--pdz-space-md) 0 var(--pdz-space-md) var(--pdz-space-md);
     display: flex;
     flex-direction: column;
-    width: fit-content;
+    width: 100%;
     gap: var(--pdz-space-sm);
   }
 
